--- a/functional-central-tile.html
+++ b/functional-central-tile.html
@@ -62,7 +62,7 @@ tile with functional and central departments info's
             <google-chart class="spark"
               type="line"
               data="[[kitchen]]"
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
             </google-chart>
           </td>
           <td>Küche</td>
@@ -71,7 +71,7 @@ tile with functional and central departments info's
             <google-chart class="spark"
               type="line"
               data="[[op]]"
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
             </google-chart>
           </td>
           <td>OP</td>
@@ -82,7 +82,7 @@ tile with functional and central departments info's
             <google-chart class="spark"
               type="line"
               data="[[cleaning]]"
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
             </google-chart>
           </td>
           <td>Reinigung</td>
@@ -91,7 +91,7 @@ tile with functional and central departments info's
             <google-chart class="spark"
               type="line"
               data="[[laboratory]]"
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
             </google-chart>
           </td>
           <td>Labor</td>
@@ -102,7 +102,7 @@ tile with functional and central departments info's
             <google-chart class="spark"
               type="line"
               data="[[laundry]]"
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
             </google-chart>
           </td>
           <td>Wäscherei</td>
@@ -111,7 +111,7 @@ tile with functional and central departments info's
             <google-chart class="spark"
               type="line"
               data="[[otherFunctional]]"
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
             </google-chart></td>
           <td>Sonstige</td>
           <td>[[_actualValue(otherFunctional)]] €</td>
@@ -121,7 +121,7 @@ tile with functional and central departments info's
             <google-chart class="spark"
               type="line"
               data="[[otherCentral]]"
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
             </google-chart>
           </td>
           <td>Sonstige</td>
