--- a/objectives-tile.html
+++ b/objectives-tile.html
@@ -73,7 +73,7 @@ tile with key metrics
             <google-chart class="spark"
               type="line"
               data="[[objective1.pastPeriods]]"
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
             </google-chart>
           </td>
           <td>[[objective1.name]]</td>
@@ -92,7 +92,7 @@ tile with key metrics
             <google-chart class="spark"
               type="line"
               data="[[objective2.pastPeriods]]"
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
             </google-chart>
           </td>
           <td>[[objective2.name]]</td>
@@ -111,7 +111,7 @@ tile with key metrics
             <google-chart class="spark"
               type="line"
               data="[[objective3.pastPeriods]]"
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
             </google-chart>
           </td>
           <td>[[objective3.name]]</td>
