--- a/shared-tile-styles.html
+++ b/shared-tile-styles.html
@@ -6,8 +6,9 @@
         margin: 4px;
       }
       .spark {
-        height: 25px;
-        width: 150px;
+        height: 100%;
+        width: 100%;
+        margin-left: -5%;
       }
       .positiveR {
         --paper-progress-container-color: #7baaf7;
