--- a/key-metrics-tile.html
+++ b/key-metrics-tile.html
@@ -26,7 +26,7 @@ tile with key metrics
         border-spacing: 0 5px;
         text-align: left;
         width: 100%;
-        height: 100%;
+        height: 90%;
       }
       thead tr th {
         font-weight: normal;
@@ -59,6 +59,7 @@ tile with key metrics
         width: 80%;
       }
       .headerContainer {
+        height: 10%
         @apply(--layout-horizontal);
         @apply(--layout-justified);
       }
