--- a/objectives-tile.html
+++ b/objectives-tile.html
@@ -2,6 +2,8 @@
 <link rel="import" href="../google-chart/google-chart.html">
 <link rel="import" href="../iron-ajax/iron-ajax.html">
 <link rel="import" href="./shared-tile-styles.html">
+<link rel="import" href="../iron-icon/iron-icon.html">
+<link rel="import" href="../iron-icons/iron-icons.html">
 <!--
 `key-metrics-tile`
 tile with key metrics
@@ -49,6 +51,23 @@ tile with key metrics
         --paper-progress-container-color: #7baaf7;
         --paper-progress-active-color: #3367d6;
       }
+      .headerContainer {
+        height: 10%;
+        @apply(--layout-horizontal);
+        @apply(--layout-justified);
+      }
+      .alignRight {
+        @apply(--layout-self-stretch);
+      }
+      .legend {
+        display: inline-block;
+        width: 5px;
+        height: 12px;
+      }
+      .progressContainer {
+        position: relative;
+        width: 80%;
+      }
     </style>
     <iron-ajax id="ajax"
       auto
@@ -56,9 +75,27 @@ tile with key metrics
       on-response="handleResponse"
       on-error="handleError">
     </iron-ajax>
-    <h3 class="caption">Ziele</h3>
-    <h3>Gesamtplatzierung [[ranking]]</h3>
+    <div class="headerContainer">
+      <h3 class="caption">Ziele</h3>
+      <div class="alignRight">
+        <span>
+          (
+          <div class="legend" style="background-color: #3367d6;"></div>
+          Aktuell;
+          <div class="legend" style="background-color: #152c5c;"></div>
+          Bester Mitspieler;)
+        </span>
+        <iron-icon class="alignRight" icon="icons:zoom-in"></iron-icon>
+      </div>
+    </div>
+    <h3>Gesamtplatzierung: [[ranking]]</h3>
     <table>
+      <colgroup>
+         <col span="1" style="width: 30%;">
+         <col span="1" style="width: 25%;">
+         <col span="1" style="width: 30%;">
+         <col span="1" style="width: 15%;">
+      </colgroup>
       <thead>
         <tr>
           <th>Vergangene 5 Perioden</th>
@@ -78,7 +115,7 @@ tile with key metrics
           </td>
           <td>[[objective1.name]]</td>
           <td>
-            <div style="position: relative">
+            <div class="progressContainer">
               <div class="knob"></div>
               <paper-progress class="progress" value="70"></paper-progress>
             </div>
@@ -97,7 +134,7 @@ tile with key metrics
           </td>
           <td>[[objective2.name]]</td>
           <td>
-            <div style="position: relative">
+            <div class="progressContainer">
               <div class="knob"></div>
               <paper-progress class="progress" value="70"></paper-progress>
             </div>
@@ -116,7 +153,7 @@ tile with key metrics
           </td>
           <td>[[objective3.name]]</td>
           <td>
-            <div style="position: relative">
+            <div class="progressContainer">
               <div class="knob"></div>
               <paper-progress class="progress" value="70"></paper-progress>
             </div>
